--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ add_executable(problem2 problem2.cpp)
 add_executable(problem3 problem3.cpp)
 add_executable(problem4 problem4.cpp)
 add_executable(problem5 problem5.cpp)
-
+add_executable(problem6 problem6.cpp)
+add_executable(problem7 problem7.cpp)
+add_executable(problem8 problem8.cpp)
+add_executable(problem9 problem9.cpp)
+add_executable(problem10 problem10.cpp)
 
 
